2006-09-04  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	* engines/smooth/src/engine/smooth_gtk2_misc.c:

	- Add some missing null widget checks
	
2006-09-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	- Fix up the configure script
	- Remove the --disable-theme option

2006-09-04  Andrew Johnson  <acjgenius@earthlink.net>

	* configure.ac:
	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/support.h:
	* engines/crux/Makefile.am:
	* engines/crux/src/crux-draw.c:
	* engines/glide/Makefile.am:
	* engines/hc/Makefile.am:
	* engines/hc/src/hc-style.c: 
	* engines/industrial/Makefile.am:
	* engines/mist/Makefile.am:
	* engines/redmond/Makefile.am:
	* engines/support/Makefile.am:
	* engines/support/widget-information.c:
	* engines/thinice/Makefile.am:
	* engines/thinice/src/thinice_theme_draw.c:

	- Add --enable-development flag
	- Fix thinice where default triangle used un-set light/dark variables
	- Ensure all engines but smooth compile with paranoia

2006-09-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc), (clearlooks_style_realize),
	(clearlooks_style_class_init):
	- Create the cached colors inside realize instead of init_from_rc.

	* engines/industrial/src/industrial_style_versioned_code.h:
	- Add note that some code will need to be factored out to realize.

	* themes/Industrial/gtk-2.0/gtkrc:
	- Fix up WnckTasklist style properties
	- Decrease fade-loop-time to 2 seconds

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Make WnckTasklist change the bg color of fading tasks.

2006-09-03  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/mist/src/mist-style.c:

	- Fix Missed GE_IS_STYLE -> GTK_IS_STYLE
	
2006-09-03  Andrew Johnson  <acjgenius@earthlink.net>
